<resources>
    <string name="app_name">Stu-Share</string>
    <string name="Logout">Logout</string>
    <string name="Home">Home</string>
    <string name="myBooks">My Books</string>
    <string name="viewBooks">View Books</string>
    <string name="createBooks">Create Books</string>
    <string name="messageCentre">Message Centre</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="title">Title</string>
    <string name="Title">Title of Book</string>
    <string name="author">Author</string>
    <string name="bookAuthor">Author of Book</string>
    <string name="edition">Edition</string>
    <string name="bookEdition">Book Edition</string>
    <string name="isbn">ISBN Number</string>
    <string name="numberISBN">Book ISBN Number</string>
    <string name="viewCurBook">View Current Book Postings</string>
    <string name="viewPastBook">View Past Book Postings</string>
    <string name="createBook">Create Book Posting</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="message">Message</string>
    <string name="terminate">Terminate</string>
    <string name="update">Update</string>
    <string name="details">Details:</string>
    <string name="Details">Book Details</string>
<<<<<<< HEAD
    <string name="my_car_share">My Car Share</string>
||||||| merged common ancestors
    <string name="my_car_share">My Car Share</string>
    <string name="my_car_share">My Car Share</string>
=======
    <string name="price">Price</string>
    <string name="Price">Price of Book</string>
    <string name="my_car_share">My Car Share</string>
>>>>>>> b6f4ba89263adb95948ff2091d30349fbc7c0149
</resources>
